# personal

./: README.md  plouf.pl  salted.R
Calculation/: CMakeLists.txt  Calculation.kdev4  Makefile  abstractstrategy.h  coller.pl  ici.csv  mixer.pl
Calculation/.kdev4/: Calculation.kdev4
Calculation/src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  Mixer.cpp  Mixer.h  abstractstrategy.cpp  abstractstrategy.h  cmake_install.cmake  core.cpp  core.h  maxmincounter.cpp  maxmincounter.h
Calculation/test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test1.cpp
